--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=send-email-springboot
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=htngoc0916.dev@gmail.com
-spring.mail.password=olpnfxtxvmqkagxa
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
